--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "drizzle-orm": "^0.31.4",
     "lucide-react": "^0.390.0",
     "moment": "^2.30.1",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "next-themes": "^0.3.0",
     "pg": "^8.13.1",
     "react": "^18.3.1",
