add admin login

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ NEXT_PUBLIC_GEMINI_API_KEY=AIzaSyAQFm4Y_qXY0DRjVvDtzjtuVA-s7vXRLHw
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/sync-user
+ADMIN_LOGIN_URL=/admin/login
 NEXT_PUBLIC_DRIZZLE_DB_URL=postgresql://new_owner:M6nyFmxOviL2@ep-rough-cherry-a556laab.us-east-2.aws.neon.tech/new?sslmode=require
 NEXT_PUBLIC_INTERVIEW_QUESTION_COUNT=  5
 NEXT_PUBLIC_QUESTION_NOTE="Enable Video Web Cam and Microphone to Start your AI Generated Mock Interview"
