--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@stripe/stripe-js": "^5.0.0",
     "alertifyjs": "^1.14.0",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.31.4",
@@ -31,6 +32,7 @@
     "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.1",
     "react-hook-speech-to-text": "^0.8.0",
     "react-webcam": "^7.2.0",
     "sonner": "^1.5.0",
