--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-themes": "^0.3.0",
     "pg": "^8.13.1",
     "react": "^18.3.1",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-hook-speech-to-text": "^0.8.0",
