--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.31.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.390.0",
     "moment": "^2.30.1",
     "next": "^14.2.3",
